re PR preprocessor/20282 (gcc4 can not bootstrap itself anymore)

PR bootstrap/20282
	PR bootstrap/20305
	* macro.c (replace_args, cpp_get_token): Copy whole
	cpp_token_u instead of just cpp_string field from it.

From-SVN: r95889